# influence-activelearning

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
configs/datasets/: adult.yaml  breast_cancer.yaml  cifar10.yaml  cifar100.yaml  cinic10.yaml  credit_g.yaml  fashion_mnist.yaml  inaturalist.yaml  phoneme.yaml  svhn.yaml  svhn_extra.yaml  tiny_imagenet.yaml
configs/methods/: badge.yaml  feature_kmeans.yaml  influence.yaml  influence_r_pseudo.yaml  influence_shapley.yaml  loss.yaml  margin.yaml  random.yaml  uncertainty.yaml
configs/studies/: adult_robustness.yaml  cifar10_robustness.yaml
src/influence_al/: __init__.py
src/influence_al/acquisition/: __init__.py  base.py  baselines.py  diversity.py  influence.py  shapley.py
src/influence_al/compat/: __init__.py  sklearn_patch.py
src/influence_al/data/: __init__.py  datasets.py  noisy.py  pool.py
src/influence_al/evaluation/: __init__.py  efficiency.py  metrics.py  oracle.py
src/influence_al/experiments/: run.py  study.py
src/influence_al/loop/: __init__.py  engine.py
src/influence_al/models/: __init__.py  trainer.py
tests/: test_baselines.py  test_datasets.py  test_diversity.py  test_efficiency.py  test_engine.py  test_influence.py  test_oracle.py  test_pool.py  test_sklearn_patch.py  test_study.py
