[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "influence-al"
version = "0.1.0"
description = "Tree-influence active learning for LightGBM"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "lightgbm>=3.3.5",
    "scikit-learn>=1.3",
    "numpy>=1.22",
    "pandas>=1.5",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
vision = ["torch>=2.0", "torchvision>=0.15"]
influence = ["tree-influence>=0.1.7; python_version < '3.11'"]
all = [
    "tree-influence>=0.1.7; python_version < '3.11'",
    "torch>=2.0",
    "torchvision>=0.15",
    "pytest>=7.0",
]

[project.scripts]
influence-al = "influence_al.experiments.run:main"
influence-al-study = "influence_al.experiments.study:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
